--- a/wrapper/pom.xml
+++ b/wrapper/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.signalfx</groupId>
+    <groupId>com.signalfx.public</groupId>
     <artifactId>otel-java-lambda-wrapper</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0</version>
+    <version>0.0.1</version>
     <name>Splunk OTEL-based Lambda Wrapper</name>
     <description>
         Splunk release of the OpenTelemetry Java Lambda Wrapper
