--- a/examples/otel-wrapper/template.yml
+++ b/examples/otel-wrapper/template.yml
@@ -22,6 +22,7 @@ Resources:
       Environment:
         Variables:
           OTEL_LAMBDA_HANDLER: com.splunk.support.lambda.examples.ApiGatewayRequestFunction::handleRequest
+          OTEL_LAMBDA_FLUSH_TIMEOUT: 30
       Events:
         RequestApiGatewayWrapperFunctionApiCall:
           Type: Api
@@ -43,6 +44,7 @@ Resources:
       Environment:
         Variables:
           OTEL_LAMBDA_HANDLER: com.splunk.support.lambda.examples.ApiGatewayRequestStreamFunction::handleRequest
+          OTEL_LAMBDA_FLUSH_TIMEOUT: 30
       Events:
         PetsList:
           Type: Api
@@ -69,6 +71,7 @@ Resources:
       Environment:
         Variables:
           OTEL_LAMBDA_HANDLER: com.splunk.support.lambda.examples.RequestFunction::handleRequest
+          OTEL_LAMBDA_FLUSH_TIMEOUT: 30
 
   # Event based streaming wrapper (no HTTP propagation)
   OtelRequestStreamFunction:
@@ -84,6 +87,7 @@ Resources:
       Environment:
         Variables:
           OTEL_LAMBDA_HANDLER: com.splunk.support.lambda.examples.RequestStreamFunction::handleRequest
+          OTEL_LAMBDA_FLUSH_TIMEOUT: 30
 
 Outputs:
   LambdaTestApi:
