--- a/examples/splunk-layer/template.yml
+++ b/examples/splunk-layer/template.yml
@@ -18,10 +18,11 @@ Resources:
       Timeout: 60
       MemorySize: 256
       Layers:
-        - arn:aws:lambda:us-east-2:906383545488:layer:otel-lambda-java-wrapper:11
+        - arn:aws:lambda:us-east-2:906383545488:layer:otel-lambda-java-wrapper:26
       Environment:
         Variables:
           OTEL_LAMBDA_HANDLER: com.splunk.support.lambda.examples.RequestFunction::handleRequest
+          OTEL_LAMBDA_FLUSH_TIMEOUT: 30
           OTEL_EXPORTER: logging
           OTEL_LAMBDA_LOG_LEVEL: DEBUG
           OTEL_LIB_LOG_LEVEL: FINEST
