--- a/examples/settings.gradle
+++ b/examples/settings.gradle
@@ -2,6 +2,12 @@ plugins {
     id 'com.gradle.enterprise' version '3.5'
 }
 
-rootProject.name = 'splunk-otel-lambda-wrapper-examples'
+gradleEnterprise {
+    buildScan {
+        termsOfServiceUrl = "https://gradle.com/terms-of-service"
+        termsOfServiceAgree = "yes"
+    }
+}
 
+rootProject.name = 'splunk-otel-lambda-wrapper-examples'
 include ('functions', 'otel-wrapper', 'splunk-layer', 'splunk-wrapper')
