code review changes

--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -1,2 +1,10 @@
 group = 'com.splunk.public'
 description = "Splunk OTEL Java Lambda Wrapper Examples"
+
+ext {
+    versions = [
+            opentelemetry: '0.14.1',
+            instrumentation: '0.14.0',
+            wrapper: '0.0.2-SNAPSHOT'
+    ]
+}
