--- a/examples/otel-wrapper/build.gradle
+++ b/examples/otel-wrapper/build.gradle
@@ -25,13 +25,14 @@ repositories {
 dependencies {
   compile project(':functions')
 
-  compile('com.amazonaws:aws-lambda-java-log4j2:1.2.0',
-          'org.apache.logging.log4j:log4j-core:2.13.3',
-          'org.apache.logging.log4j:log4j-slf4j18-impl:2.13.3',
-          'io.opentelemetry.instrumentation:opentelemetry-aws-lambda-1.0:0.13.1',
-          'io.opentelemetry:opentelemetry-sdk:0.11.0',
-          'io.opentelemetry:opentelemetry-extension-trace-propagators:0.13.1',
-          'io.opentelemetry:opentelemetry-exporter-logging:0.13.1')
+  compile("com.amazonaws:aws-lambda-java-log4j2:1.2.0",
+          "org.apache.logging.log4j:log4j-core:2.13.3",
+          "org.apache.logging.log4j:log4j-slf4j18-impl:2.13.3",
+
+          "io.opentelemetry.instrumentation:opentelemetry-aws-lambda-1.0:${versions.instrumentation}",
+          "io.opentelemetry:opentelemetry-sdk:${versions.opentelemetry}",
+          "io.opentelemetry:opentelemetry-extension-trace-propagators:${versions.opentelemetry}",
+          "io.opentelemetry:opentelemetry-exporter-logging:${versions.opentelemetry}")
 }
 
 task buildZip(type: Zip) {
