Corrected configuration env vars to reflect 0.0.2 code

--- a/examples/splunk-wrapper/template.yml
+++ b/examples/splunk-wrapper/template.yml
@@ -21,8 +21,8 @@ Resources:
       Timeout: 60
       Environment:
         Variables:
-          OTEL_LAMBDA_HANDLER: com.splunk.support.lambda.examples.ApiGatewayRequestFunction::handleRequest
-          OTEL_LAMBDA_FLUSH_TIMEOUT: 30
+          OTEL_INSTRUMENTATION_AWS_LAMBDA_HANDLER: com.splunk.support.lambda.examples.ApiGatewayRequestFunction::handleRequest
+          OTEL_INSTRUMENTATION_AWS_LAMBDA_FLUSH_TIMEOUT: 30
           OTEL_EXPORTER: logging
           OTEL_LAMBDA_LOG_LEVEL: DEBUG
           OTEL_LIB_LOG_LEVEL: FINEST
@@ -51,8 +51,8 @@ Resources:
       Timeout: 60
       Environment:
         Variables:
-          OTEL_LAMBDA_HANDLER: com.splunk.support.lambda.examples.ApiGatewayRequestStreamFunction::handleRequest
-          OTEL_LAMBDA_FLUSH_TIMEOUT: 30
+          OTEL_INSTRUMENTATION_AWS_LAMBDA_HANDLER: com.splunk.support.lambda.examples.ApiGatewayRequestStreamFunction::handleRequest
+          OTEL_INSTRUMENTATION_AWS_LAMBDA_FLUSH_TIMEOUT: 30
           OTEL_EXPORTER: logging
           OTEL_LAMBDA_LOG_LEVEL: DEBUG
           OTEL_LIB_LOG_LEVEL: FINEST
@@ -87,8 +87,8 @@ Resources:
       Timeout: 60
       Environment:
         Variables:
-          OTEL_LAMBDA_HANDLER: com.splunk.support.lambda.examples.RequestFunction::handleRequest
-          OTEL_LAMBDA_FLUSH_TIMEOUT: 30
+          OTEL_INSTRUMENTATION_AWS_LAMBDA_HANDLER: com.splunk.support.lambda.examples.RequestFunction::handleRequest
+          OTEL_INSTRUMENTATION_AWS_LAMBDA_FLUSH_TIMEOUT: 30
           OTEL_EXPORTER: logging
           OTEL_LAMBDA_LOG_LEVEL: DEBUG
           OTEL_LIB_LOG_LEVEL: FINEST
@@ -106,8 +106,8 @@ Resources:
       Timeout: 60
       Environment:
         Variables:
-          OTEL_LAMBDA_HANDLER: com.splunk.support.lambda.examples.RequestStreamFunction::handleRequest
-          OTEL_LAMBDA_FLUSH_TIMEOUT: 30
+          OTEL_INSTRUMENTATION_AWS_LAMBDA_HANDLER: com.splunk.support.lambda.examples.RequestStreamFunction::handleRequest
+          OTEL_INSTRUMENTATION_AWS_LAMBDA_FLUSH_TIMEOUT: 30
           OTEL_EXPORTER: logging
           OTEL_LAMBDA_LOG_LEVEL: DEBUG
           OTEL_LIB_LOG_LEVEL: FINEST
