--- a/examples/otel-wrapper/template.yml
+++ b/examples/otel-wrapper/template.yml
@@ -21,8 +21,8 @@ Resources:
       Timeout: 60
       Environment:
         Variables:
-          OTEL_LAMBDA_HANDLER: com.splunk.support.lambda.examples.ApiGatewayRequestFunction::handleRequest
-          OTEL_LAMBDA_FLUSH_TIMEOUT: 30
+          OTEL_INSTRUMENTATION_AWS_LAMBDA_HANDLER: com.splunk.support.lambda.examples.ApiGatewayRequestFunction::handleRequest
+          OTEL_INSTRUMENTATION_AWS_LAMBDA_FLUSH_TIMEOUT: 30
       Events:
         RequestApiGatewayWrapperFunctionApiCall:
           Type: Api
@@ -43,8 +43,8 @@ Resources:
       Timeout: 60
       Environment:
         Variables:
-          OTEL_LAMBDA_HANDLER: com.splunk.support.lambda.examples.ApiGatewayRequestStreamFunction::handleRequest
-          OTEL_LAMBDA_FLUSH_TIMEOUT: 30
+          OTEL_INSTRUMENTATION_AWS_LAMBDA_HANDLER: com.splunk.support.lambda.examples.ApiGatewayRequestStreamFunction::handleRequest
+          OTEL_INSTRUMENTATION_AWS_LAMBDA_FLUSH_TIMEOUT: 30
       Events:
         PetsList:
           Type: Api
@@ -70,8 +70,8 @@ Resources:
       Timeout: 60
       Environment:
         Variables:
-          OTEL_LAMBDA_HANDLER: com.splunk.support.lambda.examples.RequestFunction::handleRequest
-          OTEL_LAMBDA_FLUSH_TIMEOUT: 30
+          OTEL_INSTRUMENTATION_AWS_LAMBDA_HANDLER: com.splunk.support.lambda.examples.RequestFunction::handleRequest
+          OTEL_INSTRUMENTATION_AWS_LAMBDA_FLUSH_TIMEOUT: 30
 
   # Event based streaming wrapper (no HTTP propagation)
   OtelRequestStreamFunction:
@@ -86,8 +86,8 @@ Resources:
       Timeout: 60
       Environment:
         Variables:
-          OTEL_LAMBDA_HANDLER: com.splunk.support.lambda.examples.RequestStreamFunction::handleRequest
-          OTEL_LAMBDA_FLUSH_TIMEOUT: 30
+          OTEL_INSTRUMENTATION_AWS_LAMBDA_HANDLER: com.splunk.support.lambda.examples.RequestStreamFunction::handleRequest
+          OTEL_INSTRUMENTATION_AWS_LAMBDA_FLUSH_TIMEOUT: 30
 
 Outputs:
   LambdaTestApi:
