--- a/wrapper/pom.xml
+++ b/wrapper/pom.xml
@@ -164,7 +164,7 @@
         <dependency>
             <groupId>io.jaegertracing</groupId>
             <artifactId>jaeger-thrift</artifactId>
-            <version>0.33.1</version>
+            <version>1.5.0</version>
         </dependency>
         <dependency>
             <groupId>io.opentelemetry</groupId>
@@ -199,9 +199,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>logging-interceptor</artifactId>
-            <version>4.9.0</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
