--- a/examples/splunk-layer/template.yml
+++ b/examples/splunk-layer/template.yml
@@ -23,6 +23,6 @@ Resources:
         Variables:
           OTEL_INSTRUMENTATION_AWS_LAMBDA_HANDLER: com.splunk.support.lambda.examples.RequestFunction::handleRequest
           OTEL_INSTRUMENTATION_AWS_LAMBDA_FLUSH_TIMEOUT: 30
-          OTEL_EXPORTER: logging
+          OTEL_TRACE_EXPORTER: logging
           OTEL_LAMBDA_LOG_LEVEL: DEBUG
           OTEL_LIB_LOG_LEVEL: FINEST
