--- a/wrapper/pom.xml
+++ b/wrapper/pom.xml
@@ -103,6 +103,7 @@
             <artifactId>aws-lambda-java-events</artifactId>
             <version>2.2.1</version>
         </dependency>
+        <!-- LAMBDA LOGGING -->
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-lambda-java-log4j2</artifactId>
@@ -111,14 +112,21 @@
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.13.3</version>
+            <artifactId>log4j-slf4j18-impl</artifactId>
+            <version>2.13.0</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j18-impl</artifactId>
-            <version>2.13.3</version>
+            <artifactId>log4j-core</artifactId>
+            <version>2.13.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.13.0</version>
+        </dependency>
+
         <!-- OPEN TELEMETRY -->
         <dependency>
             <groupId>io.opentelemetry.instrumentation</groupId>
