--- a/examples/splunk-wrapper/template.yml
+++ b/examples/splunk-wrapper/template.yml
@@ -23,7 +23,7 @@ Resources:
         Variables:
           OTEL_INSTRUMENTATION_AWS_LAMBDA_HANDLER: com.splunk.support.lambda.examples.ApiGatewayRequestFunction::handleRequest
           OTEL_INSTRUMENTATION_AWS_LAMBDA_FLUSH_TIMEOUT: 30
-          OTEL_EXPORTER: logging
+          OTEL_TRACES_EXPORTER: logging
           OTEL_LAMBDA_LOG_LEVEL: DEBUG
           OTEL_LIB_LOG_LEVEL: FINEST
       Events:
@@ -53,7 +53,7 @@ Resources:
         Variables:
           OTEL_INSTRUMENTATION_AWS_LAMBDA_HANDLER: com.splunk.support.lambda.examples.ApiGatewayRequestStreamFunction::handleRequest
           OTEL_INSTRUMENTATION_AWS_LAMBDA_FLUSH_TIMEOUT: 30
-          OTEL_EXPORTER: logging
+          OTEL_TRACES_EXPORTER: logging
           OTEL_LAMBDA_LOG_LEVEL: DEBUG
           OTEL_LIB_LOG_LEVEL: FINEST
       Events:
@@ -89,7 +89,7 @@ Resources:
         Variables:
           OTEL_INSTRUMENTATION_AWS_LAMBDA_HANDLER: com.splunk.support.lambda.examples.RequestFunction::handleRequest
           OTEL_INSTRUMENTATION_AWS_LAMBDA_FLUSH_TIMEOUT: 30
-          OTEL_EXPORTER: logging
+          OTEL_TRACES_EXPORTER: logging
           OTEL_LAMBDA_LOG_LEVEL: DEBUG
           OTEL_LIB_LOG_LEVEL: FINEST
 
@@ -107,8 +107,8 @@ Resources:
       Environment:
         Variables:
           OTEL_INSTRUMENTATION_AWS_LAMBDA_HANDLER: com.splunk.support.lambda.examples.RequestStreamFunction::handleRequest
-          OTEL_INSTRUMENTATION_AWS_LAMBDA_FLUSH_TIMEOUT: 30
-          OTEL_EXPORTER: logging
+          OTEL_INSTRUMENTATION_AWS_LAMBDA_FLUSH_TIMEOUT: 30000
+          OTEL_TRACES_EXPORTER: logging
           OTEL_LAMBDA_LOG_LEVEL: DEBUG
           OTEL_LIB_LOG_LEVEL: FINEST
 
