--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -47,6 +47,12 @@ jobs:
           sed -i 's/OSSRH_USER/${{ secrets.OSSRH_USER }}/g' ./wrapper/release-settings.xml
           sed -i 's/OSSRH_PASSWORD/${{ secrets.OSSRH_PASSWORD }}/g' ./wrapper/release-settings.xml
 
+      - name: Install gpg secret key
+        id: install_secret_key
+        run: |
+          cat <(echo -e "${{ secrets.OSSRH_GPG_SECRET_KEY }}") | gpg --batch --import
+          gpg --list-secret-keys --keyid-format LONG
+
       - name: Publish to OSS M2 repo
         id: create_m2_release
-        run: mvn -B -DperformRelease=true deploy --file ./wrapper/pom.xml -s ./wrapper/release-settings.xml
+        run: mvn -B -DperformRelease=true -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }} deploy --file ./wrapper/pom.xml -s ./wrapper/release-settings.xml
