--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -10,7 +10,7 @@ ext {
     versions = [
             opentelemetry: '0.17.1',
             instrumentation: '0.17.0-alpha',
-            wrapper: '0.0.4'
+            wrapper: '0.0.5-SNAPSHOT'
     ]
 }
 
