--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -9,6 +9,7 @@ description = "Splunk OTEL Java Lambda Wrapper Examples"
 ext {
     versions = [
             opentelemetry: '0.17.1',
+            opentelemetryalpha: '0.17.1-alpha',
             instrumentation: '0.17.0-alpha',
             wrapper: '0.0.5-SNAPSHOT'
     ]
