--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -11,7 +11,7 @@ ext {
             opentelemetry: '1.1.0',
             opentelemetryalpha: '1.1.0-alpha',
             instrumentation: '1.1.0-alpha',
-            wrapper: '0.1.0-SNAPSHOT'
+            wrapper: '0.0.9'
     ]
 }
 
