--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,38 @@
+include:
+  - project: 'prodsec/scp-scanning/gitlab-checkmarx'
+    ref: latest
+    file: '/templates/.sast_scan.yml'
+  - project: 'prodsec/whitesource'
+    ref: latest
+    file: '/templates/.whitesource.yml'
+
 image:
   name: "maven:3-jdk-8"
 
 stages:
+  - verify
   - release
+
+sast-scan:
+  stage: verify
+  rules:
+    - if: '$CI_COMMIT_REF_NAME == "main"'
+  extends: .sast_scan
+  variables:
+    SAST_SCANNER: "Semgrep"
+    # Fail build on high severity security vulnerabilities
+    alert_mode: "policy"
+
+whitesource:
+  stage: verify
+  rules:
+    - if: '$CI_COMMIT_REF_NAME == "main"'
+  extends: .whitesource
+  variables:
+    ws_user_key: ${WHITESOURCE_USER_KEY}
+    product_id: ${WHITESOURCE_ID}
+    config: java-maven
+    lib_path: "${CI_PROJECT_DIR}/wrapper"
 
 release:
   stage: release
