--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-* @kubawach @mateuszrzeszutek @signalfx/gdi-instrumentation-java
+* @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/gdi-instrumentation-java
 
 #####################################################
 #
@@ -6,7 +6,7 @@
 #
 #####################################################
 
-*.md    @kubawach @mateuszrzeszutek @signalfx/gdi-instrumentation-java @signalfx/docs
-*.rst   @kubawach @mateuszrzeszutek @signalfx/gdi-instrumentation-java @signalfx/docs
-docs/   @kubawach @mateuszrzeszutek @signalfx/gdi-instrumentation-java @signalfx/docs
-README* @kubawach @mateuszrzeszutek @signalfx/gdi-instrumentation-java @signalfx/docs
+*.md    @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/gdi-instrumentation-java @signalfx/docs
+*.rst   @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/gdi-instrumentation-java @signalfx/docs
+docs/   @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/gdi-instrumentation-java @signalfx/docs
+README* @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/gdi-instrumentation-java @signalfx/docs
