--- a/wrapper/pom.xml
+++ b/wrapper/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.signalfx.public</groupId>
     <artifactId>otel-java-lambda-wrapper</artifactId>
     <packaging>jar</packaging>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.0.6-SNAPSHOT</version>
     <name>Splunk OTEL-based Lambda Wrapper</name>
     <description>
         Splunk release of the OpenTelemetry Java Lambda Wrapper
@@ -256,6 +256,12 @@
             <artifactId>opentelemetry-sdk-extension-resources</artifactId>
             <version>${otel.version}</version>
         </dependency>
+        <!-- AWS resource providers -->
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-sdk-extension-aws</artifactId>
+            <version>${otel.version}</version>
+        </dependency>
         <!-- AUTO SERVICE - for SDK -->
         <dependency>
             <groupId>com.google.auto.service</groupId>
@@ -305,7 +311,7 @@
         </dependency>
         <dependency>
             <groupId>io.opentelemetry</groupId>
-            <artifactId>opentelemetry-sdk-extension-aws</artifactId>
+            <artifactId>opentelemetry-extension-aws</artifactId>
             <version>${otel.version}</version>
         </dependency>
 
