--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,7 +6,7 @@
 #
 #####################################################
 
-*.md    @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/gdi-instrumentation-java @signalfx/docs
-*.rst   @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/gdi-instrumentation-java @signalfx/docs
-docs/   @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/gdi-instrumentation-java @signalfx/docs
-README* @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/gdi-instrumentation-java @signalfx/docs
+*.md    @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/gdi-instrumentation-java @signalfx/gdi-docs
+*.rst   @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/gdi-instrumentation-java @signalfx/gdi-docs
+docs/   @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/gdi-instrumentation-java @signalfx/gdi-docs
+README* @signalfx/gdi-java-maintainers @signalfx/gdi-java-approvers @signalfx/gdi-instrumentation-java @signalfx/gdi-docs
